# u64cmd

./: Makefile  README.md  dev_req.txt  pyproject.toml
u64cmd/: __main__.py  cli.py  socket.py  util.py
